syntax = "proto3";

option go_package = "github.com/SaucySalamander/owl-db/pkg/proto";

package proto;

service Accounts {
    rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {}
    rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse) {}
    rpc CreateAccount(CreateAccountRequest) returns(CreateAccountResponse) {}
    rpc DeleteAccount(DeleteAccountRequest) returns(DeleteAccountResponse) {}
}

message Account {
    int64 id = 1;
    string name = 2;
}

message GetAccountRequest {
    int64 id = 1; 
}
message GetAccountResponse {
    Account account = 1;
}

message GetAccountsRequest {
}
message GetAccountsResponse {
    repeated Account account = 1;
}

message CreateAccountRequest {
    string name = 1;
}
message CreateAccountResponse {
    int64 id = 1;
}

message DeleteAccountRequest {
    int64 id = 1;
}
message DeleteAccountResponse {
    bool response = 1;
}